<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GfxTablet</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About / Help</string>
    <string name="menu_donate">Donate</string>

    <string name="fullscreen">Full-screen mode</string>
    <string name="menu_set_template_image">Set template image</string>
    <string name="menu_clear_template_image">Clear template image</string>
    <string name="menu_select_another_template_image">Select another image</string>

    <string name="no_host_defined">No valid recipient host defined. Please configure in \"Settings / Recipient host\".</string>

    <string name="preferences_host">Recipient host</string>
    <string name="preferences_host_summary">Host name or IP address where touch input is sent to</string>
    <string name="preferences_stylus_only">Sense stylus only</string>
    <string name="preferences_stylus_only_on">Only stylus input will be processed</string>
    <string name="preferences_stylus_only_off">Finger and stylus input will be processed</string>
    <string name="preferences_dark_canvas">Use dark canvas</string>
    <string name="preferences_dark_canvas_on">Black canvas will be used (covers template image)</string>
    <string name="preferences_dark_canvas_off">White/transparent gridded canvas will be used</string>
    <string name="preferences_keep_display_active">Keep display active</string>
    <string name="preferences_keep_display_active_on">Display won\'t turn off while GfxTablet is active</string>
    <string name="preferences_keep_display_active_off">Display will turn off according to system settings</string>
    <string name="preferences_button_pressure">Button pressure threshold</string>
    <string name="preferences_button_pressure_summary">How much pressure is necessary to trigger a button event</string>
    <string name="preferences_relative_mode">Relative mode</string>
    <string name="preferences_relative_mode_summary_on">Behave like a trackpad</string>
    <string name="preferences_relative_mode_summary_off">Behave like a graphics tablet</string>
    <string name="preferences_rel_sensitivity">Sensitivity</string>
    <string name="preferences_rel_sensitivity_summary">How fast the cursor moves in relative mode</string>

</resources>
