<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Network preferences">
        <EditTextPreference
            android:defaultValue="host.example.com"
            android:key="host_preference"
            android:singleLine="true"
            android:inputType="textUri"
            android:title="@string/preferences_host"
            android:summary="@string/preferences_host_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Drawing preferences">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keep_display_active_preference"
            android:title="@string/preferences_keep_display_active"
            android:summaryOn="@string/preferences_keep_display_active_on"
            android:summaryOff="@string/preferences_keep_display_active_off" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="stylus_only_preference"
            android:title="@string/preferences_stylus_only"
            android:summaryOn="@string/preferences_stylus_only_on"
            android:summaryOff="@string/preferences_stylus_only_off" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="dark_canvas_preference"
            android:title="@string/preferences_dark_canvas"
            android:summaryOn="@string/preferences_dark_canvas_on"
            android:summaryOff="@string/preferences_dark_canvas_off" />

        <EditTextPreference
            android:defaultValue="1"
            android:key="button_pressure_preference"
            android:inputType="number"
            android:title="@string/preferences_button_pressure"
            android:summary="@string/preferences_button_pressure_summary"
            android:numeric="integer" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="relative_mode_preference"
            android:title="@string/preferences_relative_mode"
            android:summaryOn="@string/preferences_relative_mode_summary_on"
            android:summaryOff="@string/preferences_relative_mode_summary_off" />

        <EditTextPreference
            android:defaultValue="1"
            android:key="rel_sensitivity_preference"
            android:inputType="number"
            android:title="@string/preferences_rel_sensitivity"
            android:summary="@string/preferences_rel_sensitivity_summary"
            android:numeric="decimal" />

    </PreferenceCategory>
</PreferenceScreen>
